@@ -258,8 +258,8 @@
         mysql &= "INNER JOIN ITEMMASTER ITM ON ITM.ITEMCODE = L.ITEMCODE "
         mysql &= "INNER JOIN TBL_GAMIT USR ON USR.USERID = L.ENCODER "
         mysql &= "INNER JOIN TBL_GAMIT USR2 ON USR2.USERID = LY.PAYMENTENCODER "
-        mysql &= "WHERE L.STATUS = '1' AND LY.STATUS = '1' AND PAYMENTDATE = '" & monCal.SelectionStart.ToShortDateString & "'"
-
+        mysql &= "WHERE L.STATUS = '1' AND LY.STATUS = '1' AND PAYMENTDATE = '" & monCal.SelectionStart.ToShortDateString & "' "
+        mysql &= "ORDER BY L.DOCDATE ASC "
         Dim dic As New Dictionary(Of String, String)
         dic.Add("txtMonthOf", monCal.SelectionStart.ToShortDateString)
         dic.Add("branchName", branchName)
@@ -283,7 +283,8 @@
         mysql &= "INNER JOIN ITEMMASTER ITM ON ITM.ITEMCODE = L.ITEMCODE "
         mysql &= "INNER JOIN TBL_GAMIT USR ON USR.USERID = L.ENCODER "
         mysql &= "INNER JOIN TBL_GAMIT USR2 ON USR2.USERID = LY.PAYMENTENCODER "
-        mysql &= "WHERE L.STATUS = '1' AND LY.STATUS = '1' AND PAYMENTDATE BETWEEN '" & st.ToShortDateString & "' AND '" & en.ToShortDateString & "'"
+        mysql &= "WHERE L.STATUS = '1' AND LY.STATUS = '1' AND PAYMENTDATE BETWEEN '" & st.ToShortDateString & "' AND '" & en.ToShortDateString & "' "
+        mysql &= "ORDER BY L.DOCDATE ASC "
 
         Dim dic As New Dictionary(Of String, String)
         dic.Add("txtMonthOf", "FOR THE MONTH OF " + st.ToString("MMMM yyyy"))
@@ -301,7 +302,8 @@
         mysql &= "FROM TBLLAYAWAY L "
         mysql &= "INNER JOIN TBLCLIENT C ON C.CLIENTID = L.CUSTOMERID "
         mysql &= "INNER JOIN ITEMMASTER ITM ON ITM.ITEMCODE = L.ITEMCODE "
-        mysql &= "WHERE L.STATUS = '0' AND L.FORFEITDATE = '" & monCal.SelectionStart.ToShortDateString & "'"
+        mysql &= "WHERE L.STATUS = '0' AND L.FORFEITDATE = '" & monCal.SelectionStart.ToShortDateString & "' "
+        mysql &= "ORDER BY L.DOCDATE ASC "
 
         Dim dic As New Dictionary(Of String, String)
         dic.Add("txtMonthOf", monCal.SelectionStart.ToShortDateString)
@@ -321,7 +323,8 @@
         mysql &= "FROM TBLLAYAWAY L "
         mysql &= "INNER JOIN TBLCLIENT C ON C.CLIENTID = L.CUSTOMERID "
         mysql &= "INNER JOIN ITEMMASTER ITM ON ITM.ITEMCODE = L.ITEMCODE "
-        mysql &= "WHERE L.STATUS = '0' AND L.FORFEITDATE BETWEEN '" & st.ToShortDateString & "' AND '" & en.ToShortDateString & "'"
+        mysql &= "WHERE L.STATUS = '0' AND L.FORFEITDATE BETWEEN '" & st.ToShortDateString & "' AND '" & en.ToShortDateString & "' "
+        mysql &= "ORDER BY L.DOCDATE ASC "
 
         Dim dic As New Dictionary(Of String, String)
         dic.Add("txtMonthOf", "FOR THE MONTH OF " + st.ToString("MMMM yyyy"))
@@ -374,7 +377,8 @@
         mysql &= "FROM TBLLAYAWAY L "
         mysql &= "INNER JOIN TBLCLIENT C ON C.CLIENTID = L.CUSTOMERID "
         mysql &= "INNER JOIN ITEMMASTER ITM ON ITM.ITEMCODE = L.ITEMCODE "
-        mysql &= "WHERE L.STATUS = '1' AND L.BALANCE <> 0 AND L.DOCDATE <= '" & monCal.SelectionStart.ToShortDateString & "'"
+        mysql &= "WHERE L.STATUS = '1' AND L.BALANCE <> 0 AND L.DOCDATE <= '" & monCal.SelectionStart.ToShortDateString & "' "
+        mysql &= "ORDER BY L.DOCDATE ASC "
 
         Dim dic As New Dictionary(Of String, String)
         dic.Add("txtMonthOf", monCal.SelectionStart.ToShortDateString)
